fixed shift details

--- a/client/stylesheets/index.css
+++ b/client/stylesheets/index.css
@@ -195,3 +195,8 @@ select {
   text-align: center;
   padding: 50px;
 }
+
+.icon {
+  padding-left: 20px;
+  padding-bottom: 2px;
+}
